--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
-
-
 .body-container {
   box-sizing: border-box;
   width: 100%;
   height: 150vh;
   padding: 0;
-  background-image: url("./images/Background_Notebook.png");
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-color: rgba(240, 149, 2, 0.469);
 }
 .header-container{
   box-sizing: border-box;
